--- a/platformio/platformio.ini
+++ b/platformio/platformio.ini
@@ -26,7 +26,7 @@ debug_tool = picoprobe
 monitor_port = COM3
 ; This enables int64 printf.
 board_build.nano = disable
-board_build.pio = src/display/mk3_tft.pio
+board_build.pio = src/display/tft_driver.pio
 build_flags = 
 	-O3
 	-Wno-missing-field-initializers
