Cleaned up platformio.ini

--- a/platformio/platformio.ini
+++ b/platformio/platformio.ini
@@ -1,21 +1,23 @@
 ; PlatformIO Project Configuration File
+; 
 ;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
+; Platform io documentation:
 ; https://docs.platformio.org/page/projectconf.html
-
-; monitor_port = COM8
-; monitor_port = COM3
-
+;
+; Using a third party platformio fraemwrok from WizIo which 
+; gives the bare Pico C++ SDK exprience. Install the baremetal
+; fraemwrok per the instructions at https://github.com/Wiz-IO/wizio-pico
+; Tested with version 1.08. 'raspberry-pi-pico' Raspberry Pi Pico (PICOPROBE)
+;
 ; USB Serial notes:
-; 1. Use 'zadig' app to set 'Board CDC' device (id: 2E8A, 000A), 
+; 1. Use 'zadig' app to set 'Board CDC' device (id: 2E8A/000A), 
 ;    to driver USB Serial (CDC)
 ; 2. Update the monitor_port COM port below to the actual number
 ;    the Pico is assinged to on your system. 
+; 3. The expected functionality is that pressing the platformio
+; Upload button (right arrow at the bottom of the screen), will
+; build the program, upload it to the Pico and restart the 
+; anaylzer's program. 
 
 [env:raspberry-pi-pico]
 platform = wizio-pico
@@ -24,7 +26,7 @@ framework = baremetal
 upload_protocol = picoprobe
 debug_tool = picoprobe
 monitor_port = COM3
-; This enables int64 printf.
+; This enables Pico's int64 printf.
 board_build.nano = disable
 board_build.pio = src/display/tft_driver.pio
 build_flags = 
@@ -35,8 +37,6 @@ build_flags =
 	-I "$PROJECT_CORE_DIR/packages/framework-wizio-pico/SDK/pico"
 	-D PICO_STDIO_USB
 lib_ignore = freertos, wiring
-
-
 ;monitor_speed = 115200
 
 ;lib_deps = 
