Specified an exact Wizio version.

--- a/platformio/platformio.ini
+++ b/platformio/platformio.ini
@@ -20,7 +20,10 @@
 ; anaylzer's program. 
 
 [env:raspberry-pi-pico]
-platform = wizio-pico
+; Fixing to Wizio 1.08 which is known to be good.
+platform = https://github.com/Wiz-IO/wizio-pico.git#3250e0732cf4c0ff72d4c689317fc7481a34b612
+platform_packages =
+	framework-wizio-pico@https://github.com/Wiz-IO/framework-wizio-pico.git#6f1e42f31a10441688c67588d98ffc9473a2470d
 board = raspberry-pi-pico
 framework = baremetal
 upload_protocol = picoprobe
