Cleaned up platformio.ini

--- a/platformio/platformio.ini
+++ b/platformio/platformio.ini
@@ -5,9 +5,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 ;
 ; Using a third party platformio fraemwrok from WizIo which 
-; gives the bare Pico C++ SDK exprience. Install the baremetal
-; fraemwrok per the instructions at https://github.com/Wiz-IO/wizio-pico
-; Tested with version 1.08. 'raspberry-pi-pico' Raspberry Pi Pico (PICOPROBE)
+; gives the bare Pico C++ SDK exprience.
 ;
 ; USB Serial notes:
 ; 1. Use 'zadig' app to set 'Board CDC' device (id: 2E8A/000A), 
@@ -28,6 +26,7 @@ board = raspberry-pi-pico
 framework = baremetal
 upload_protocol = picoprobe
 debug_tool = picoprobe
+; Adjust it to the COM port used by the analyzer on your system.
 monitor_port = COM3
 ; This enables Pico's int64 printf.
 board_build.nano = disable
@@ -40,6 +39,8 @@ build_flags =
 	-I "$PROJECT_CORE_DIR/packages/framework-wizio-pico/SDK/pico"
 	-D PICO_STDIO_USB
 lib_ignore = freertos, wiring
+ 
+
 ;monitor_speed = 115200
 
 ;lib_deps = 
